test_scores/negative_dimers/features/P0CB47.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P0CB47.pkl.xz